Exclude sitemap and robots from SPA rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -17,10 +17,8 @@
       ]
     }
   ],
-  "routes": [
-    { "src": "/sitemap.xml", "dest": "/sitemap.xml" },
-    { "src": "/robots.txt", "dest": "/robots.txt" },
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/:path((?!sitemap\\.xml|robots\\.txt).*)", "destination": "/index.html" }
   ]
 }
