--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,6 @@
   "framework": "vite",
   "headers": [
     {
-      "source": "/sitemap.xml",
-      "headers": [
-        { "key": "Content-Type", "value": "application/xml" },
-        { "key": "Cache-Control", "value": "public, max-age=3600" }
-      ]
-    },
-    {
       "source": "/robots.txt",
       "headers": [
         { "key": "Content-Type", "value": "text/plain" }
@@ -18,7 +11,8 @@
     }
   ],
   "rewrites": [
+    { "source": "/sitemap.xml", "destination": "/api/sitemap.xml" },
     { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/:path((?!sitemap\\.xml|robots\\.txt).*)", "destination": "/index.html" }
+    { "source": "/:path((?!robots\\.txt).*)", "destination": "/index.html" }
   ]
 }
